<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lights2"
    tools:context="x14532757.softwareproject.HomeScreen"
    tools:ignore="Overdraw">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:id="@+id/MainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_weight="2.47"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/main_icon" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="KRYPTIUM"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/buttonTextColor"
                    android:visibility="visible"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:layout_weight="2.47"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_passtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/viewpasswordBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/cardview_shadow_end_color"
                        android:contentDescription="@string/todo"
                        android:elevation="0dp"
                        app:srcCompat="@drawable/password" />

                    <ImageButton
                        android:id="@+id/addtextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/cardview_shadow_end_color"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_titles1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/passText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="View Passwords"
                        android:textColor="@color/buttonTextColor"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/textText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="View Text Blocks"
                        android:textColor="@color/buttonTextColor"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_fileimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="NestedWeights">

                    <ImageButton
                        android:id="@+id/filesBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/cardview_shadow_end_color"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/files" />

                    <ImageButton
                        android:id="@+id/imageBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/cardview_shadow_end_color"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/image" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_titles2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/filesText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="View Files"
                        android:textColor="@color/buttonTextColor"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/imageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="View Images"
                        android:textColor="@color/buttonTextColor"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/accountBtn"
                        style="@style/FirebaseUI.Button.AccountChooser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="20dp"
                        android:drawableStart="?android:attr/actionModeFindDrawable"
                        android:gravity="center_vertical"
                        android:text="MY ACCOUNT"
                        android:textColor="@color/colorButton"
                        tools:ignore="HardcodedText" />

                    <Button
                        android:id="@+id/logoutBtn"
                        style="@style/FirebaseUI.Button.AccountChooser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorButton"
                        android:drawablePadding="20dp"
                        android:drawableStart="?android:attr/homeAsUpIndicator"
                        android:gravity="center_vertical"
                        android:text="LOGOUT"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
