...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/emailBtn"
                    style="@style/FirebaseUI.Button.AccountChooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButton"
                    android:drawablePadding="20dp"
                    android:drawableStart="@android:drawable/ic_menu_send"
...
